--- a/configuration.yaml
+++ b/configuration.yaml
@@ -20,52 +20,54 @@ input_number:
     unit_of_measurement: kWh
     step: 0.1
 
+# Current month's average spot price; updated each night with automation "Update Monthly Average with Today's Spot"
   elspot_monthly_average:
     name: "Elspot Monthly Average"
-    min: 0
-    max: 500
-    step: 0.01
+    min: -200
+    max: 1000
+    step: 0.1
     unit_of_measurement: "öre/kWh"
-    
+
+# We buy if elpris_buy_kostnad <= buy_threshold_ore
   buy_threshold_ore:
     name: "Buy threshold (öre/kWh)"
-    min: 50
-    max: 300
+    min: -200
+    max: 50
     step: 1
     unit_of_measurement: "öre/kWh"
     icon: mdi:arrow-down-bold
-
+# We sell if elpris_ore_current >= sell_threshold_ore
   sell_threshold_ore:
     name: "Sell threshold (öre/kWh)"
-    min: 0
+    min: 100
     max: 600
     step: 1
     unit_of_measurement: "öre/kWh"
     icon: mdi:arrow-up-bold
 
+# This is baked into elpris_buy_kostnad
   desired_profit_margin:
     name: "Önskad vinstmarginal (öre/kWh)"
     min: 10
     max: 500
     step: 1
     unit_of_measurement: "öre/kWh"
-    icon: mdi:arrow-up-bold
 
+# This is baked into elpris_buy_kostnad
   skekraft_paslag:
     name: "SkeKraft påslag (öre/kWh)"
     min: 0
     max: 100
     step: 0.1
     unit_of_measurement: "öre/kWh"
-    icon: mdi:arrow-up-bold
 
+# This is baked into elpris_buy_kostnad
   skekraft_rorligt:
     name: "SkeKraft rörliga avgifter (öre/kWh)"
     min: 0
     max: 100
     step: 0.1
     unit_of_measurement: "öre/kWh"
-    icon: mdi:arrow-up-bold
 
   reserve_soc_morning:
     name: "Reserve SOC before solar peak (%)"
